Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14847

clients crash: __ldlm_replay_locks()) ASSERTION( atomic_read(&imp->imp_replay_inflight) == 1 ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      stdout.log
      /usr/lib64/lustre/tests/ha.sh: 14:20:32 1624198832: Dumping lctl log to /tmp/ha.sh-129636-1624198832.dk
      /usr/lib64/lustre/tests/ha.sh: 14:20:42 1624198842: ior stopped: rc=255 mustpass=1 avg loop time 35
      /usr/lib64/lustre/tests/ha.sh: 14:20:50 1624198850: attempt: 1
      cslmo1100: Command completed successfully
      pmrc=0
      /usr/lib64/lustre/tests/ha.sh: 14:20:52 1624198852: ---------------8---------------
      /usr/lib64/lustre/tests/ha.sh: 14:20:52 1624198852: Summary:
      /usr/lib64/lustre/tests/ha.sh: 14:20:52 1624198852:     Duration: 16807s
      /usr/lib64/lustre/tests/ha.sh: 14:20:52 1624198852:     Loops: 5
      /usr/lib64/lustre/tests/ha.sh: 14:20:52 1624198852: Dumping lctl log to /tmp/ha.sh-129636-1624198852.dk
      /usr/lib64/lustre/tests/ha.sh: 14:21:02 1624198862: Waiting for workloads to stop
      /usr/lib64/lustre/tests/ha.sh: 16:05:28 1624205128: c-lmo006: rc=255 rccheck=0 mustpass=1
      /usr/lib64/lustre/tests/ha.sh: 16:05:28 1624205128: Dumping lctl log to /tmp/ha.sh-129636-1624205128.dk
      /usr/lib64/lustre/tests/ha.sh: 16:05:29 1624205129: ior stopped: rc=255 mustpass=1 avg loop time 103
      /usr/lib64/lustre/tests/ha.sh: 16:09:19 1624205359: c-lmo006: rc=255 rccheck=0 mustpass=1
      /usr/lib64/lustre/tests/ha.sh: 16:09:19 1624205359: Dumping lctl log to /tmp/ha.sh-129636-1624205359.dk
       
      c-lmo006, c-lmo009 clients:
      [185729.176014] LustreError: 141874:0:(ldlm_request.c:2494:__ldlm_replay_locks()) ASSERTION( atomic_read(&imp->imp_replay_inflight) == 1 ) failed: 
      [185729.176056] LustreError: 141873:0:(ldlm_request.c:2494:__ldlm_replay_locks()) ASSERTION( atomic_read(&imp->imp_replay_inflight) == 1 ) failed: 
      [185729.176058] LustreError: 141873:0:(ldlm_request.c:2494:__ldlm_replay_locks()) LBUG
      [185729.176059] Pid: 141873, comm: ldlm_lock_repla 3.10.0-957.5.1.el7.x86_64 #1 SMP Fri Feb 1 14:54:57 UTC 2019
      [185729.176059] Call Trace:
      [185729.176078] [<0>] libcfs_call_trace+0x8e/0xf0 [libcfs]
      [185729.176082] [<0>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [185729.176120] [<0>] __ldlm_replay_locks+0x874/0x9d0 [ptlrpc]
      [185729.176134] [<0>] ldlm_lock_replay_thread+0x31/0xd0 [ptlrpc]
      [185729.176137] [<0>] kthread+0xd1/0xe0
      [185729.176139] [<0>] ret_from_fork_nospec_begin+0x21/0x21
      [185729.176161] [<0>] 0xfffffffffffffffe
      [185729.176162] Kernel panic - not syncing: LBUG
      [185729.176164] CPU: 14 PID: 141873 Comm: ldlm_lock_repla Kdump: loaded Tainted: G           OE  ------------   3.10.0-957.5.1.el7.x86_64 #1
      [185729.176164] Hardware name: Intel Corporation S2600JF/S2600JF, BIOS SE5C600.86B.02.03.0003.041920141333 04/19/2014
      [185729.176165] Call Trace:
      [185729.176169]  [<ffffffff92b61e41>] dump_stack+0x19/0x1b
      [185729.176171]  [<ffffffff92b5b550>] panic+0xe8/0x21f
      [185729.176175]  [<ffffffffc0bac8fb>] lbug_with_loc+0x9b/0xa0 [libcfs]
      [185729.176189]  [<ffffffffc0ef40f4>] __ldlm_replay_locks+0x874/0x9d0 [ptlrpc]
      [185729.176192]  [<ffffffff9261c24b>] ? kmem_cache_alloc+0x19b/0x1f0
      [185729.176206]  [<ffffffffc0ef4250>] ? __ldlm_replay_locks+0x9d0/0x9d0 [ptlrpc]
      [185729.176212]  [<ffffffffc0bb52c7>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [185729.176225]  [<ffffffffc0ef4250>] ? __ldlm_replay_locks+0x9d0/0x9d0 [ptlrpc]
      [185729.176239]  [<ffffffffc0ef4281>] ldlm_lock_replay_thread+0x31/0xd0 [ptlrpc]
      [185729.176240]  [<ffffffff924c1c71>] kthread+0xd1/0xe0
      [185729.176242]  [<ffffffff924c1ba0>] ? insert_kthread_work+0x40/0x40
      [185729.176243]  [<ffffffff92b74c37>] ret_from_fork_nospec_begin+0x21/0x21
      [185729.176245]  [<ffffffff924c1ba0>] ? insert_kthread_work+0x40/0x40
       

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: